align bug in ie

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ footer {
 
 }
 .count_field, .result_field {
-
+text-align:center;
     /*width: 100%;*/
     /*height: 100%;*/
     /*position: fixed;*/
@@ -59,6 +59,7 @@ a {
     margin: 5px 0;
 }
 .inner_count, .inner_result {
+    text-align: left;
     margin-left: auto;
     margin-right: auto;
     margin-top:40px;
